--- a/JS/index.html
+++ b/JS/index.html
@@ -54,12 +54,20 @@ LINGUAGEM FUNCIONAL (estudar)
 				}
 				return soma;
 			}
+			// console.log - mostra no Dev Tools (F12)
+			function reverter(pal){
+				var aux = "";
+				for(let i in pal){
+					aux = pal[i] + aux;
+				}
+				return
+			}
 			
 		</script>
 	</head>
 		<body>
 			<script>
-				alert(somarTodos([1,2,3]));
+				alert(reverter("AMOR"));
 			</script>		
 		</body>
 </html>
